[gd_scene load_steps=10 format=3 uid="uid://dkfyim1nrrba1"]

[ext_resource type="Texture2D" uid="uid://bxj3j0slc7n0t" path="res://Assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_q1rsm"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_w5y3t"]
[ext_resource type="AudioStream" uid="uid://dllndypxi55dq" path="res://Assets/brackeys_platformer_assets/sounds/hurt.wav" id="3_o5v00"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6pjao"]
atlas = ExtResource("1_q1rsm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ltjk"]
atlas = ExtResource("1_q1rsm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lrqu"]
atlas = ExtResource("1_q1rsm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_50t2f"]
atlas = ExtResource("1_q1rsm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_djxxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pjao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ltjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lrqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50t2f")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtgpx"]
size = Vector2(14, 14)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_w5y3t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_djxxn")
autoplay = "default"
frame_progress = 0.900171

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_gtgpx")

[node name="Timer" type="Timer" parent="Area2D"]
one_shot = true

[node name="RayCastR" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(11, 0)

[node name="RayCastL" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-11, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o5v00")
volume_db = -3.748

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
